--- a/source/CachedImage.nuspec
+++ b/source/CachedImage.nuspec
@@ -12,7 +12,7 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <releaseNotes>First version</releaseNotes>
-    <copyright>Copyright 2014</copyright>
+    <copyright>MIT © Haridas Pachuveetil  2014</copyright>
     <tags>WPF Cache Image Control</tags>
   </metadata>
 </package>
