--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Cached Image
 description: A WPF control that wraps the Image control to enable file-system based caching.
 google_analytics: UA-36383654-5
 show_downloads: true
-theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
 
 gems:
   - jekyll-mentions
