--- a/source/CachedImage.nuspec
+++ b/source/CachedImage.nuspec
@@ -11,7 +11,7 @@
     <iconUrl>http://floydpink.github.io/CachedImage/images/logo.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <copyright>MIT © Haridas Pachuveetil  2014</copyright>
+    <copyright>MIT © Haridas Pachuveetil  2014 - 2021</copyright>
     <tags>WPF Cache Image Control</tags>
   </metadata>
 </package>
