--- a/source/CachedImage.csproj
+++ b/source/CachedImage.csproj
@@ -2,7 +2,21 @@
 
   <PropertyGroup>
     <TargetFrameworks>net45;netcoreapp3.1;net5.0-windows</TargetFrameworks>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <Version>0.1.0.0</Version>
+    <Authors>floydpink</Authors>
+    <Company>floydpink</Company>
+    <Product>CachedImage</Product>
+    <PackageId>CachedImage</PackageId>
+    <AssemblyVersion>0.1.0.0</AssemblyVersion>
+    <FileVersion>0.1.0.0</FileVersion>
+    <NeutralLanguage>en</NeutralLanguage>
+    <Description>A WPF control that wraps the Image control with some filesystem caching</Description>
+    <Copyright>MIT © Haridas Pachuveetil  2014 - 2021</Copyright>
+    <PackageLicenseUrl>https://github.com/floydpink/CachedImage/blob/main/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/floydpink/CachedImage</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/floydpink/CachedImage/blob/main/LICENSE</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageReleaseNotes>Release</PackageReleaseNotes>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
